--- a/style.css
+++ b/style.css
@@ -1,22 +1,20 @@
 *{
     margin: 0;
-    padding: 0; 
-    
+    padding: 0;    
 }
 
-.fundo{
+.background{
     background-image: linear-gradient(rgb(0, 0, 0),rgba(0, 0, 0, 0.842));   
-    height: 100vh;
-    
+    height: 100vh;    
 }
 
 
-h1{
+h1{    
     text-align: center;
     color: aliceblue;
 }
 
-#ligar{
+#on{
     display: block;
     width: 150px;
     height: 75px;
@@ -31,12 +29,12 @@ h1{
     cursor: pointer;
 }
 
-#ligar:hover{
+#on:hover{
     background-color: rgba(255, 255, 255, 0.75);
     transition: 0.4s;
 }
 
-#desligar{
+#off{
     display: none;
     width: 150px;
     height: 75px;
@@ -51,6 +49,6 @@ h1{
     cursor: pointer;
 }
 
-#desligar:hover{
+#off:hover{
     background-color: rgba(255, 255, 255, 0.75);
 }
